<resources>

    <string name="app_name">ITest</string>
    <string name="icst_site">Сайт ИКНТ</string>
    <string name="edu_title">Направления подготовки</string>
    <string name="testing">Тестирование</string>
    <string name="result">Результат</string>

    <!-- navigationDrawer titles -->
    <string name="about">О приложении</string>
    <string name="last_res">Последний результат</string>
    <string name="rate">Оценить приложение</string>
    <string name="share">Поделиться</string>
    <string name="exit">Выход</string>
    <string name="support">Служба поддержки</string>
    <string name="info_about">О направлениях</string>

    <!-- messages -->
    <string name="no_data">Нет данных</string>
    <string name="tap_again">Для выхода нажмите "назад" еще раз</string>
    <string name="share_msg">Узнай, кто ты в мире IT! </string>
    <string name="share_res_msg"> Я узнал кем являюсь в мире IT! Попробуй и ты!</string>
    <string name="hello">Здравствуйте!</string>
    <string name="hi">Привет!</string>
    <string name="send">Отправить</string>
    <string name="support_type_prompt">Выберите тип обращения</string>
    <string name="support_hint">Введите текст</string>
    <string name="no_email_client">Нет email клиента</string>
    <string name="start_test">Начать тест</string>
    <string name="res_dir_icst">Направления подготовки ИКНТ СПбПУ, готовящие специалистов в этой области:</string>
    <string name="title_post">Уведомление</string>
    <string name="read_post">Нажмите для прочтения</string>
    <string name="site_menu_delete_all">Удалить все</string>
    <string name="settings">Настройки</string>
    <string name="notifications">Уведомления</string>
    <string name="delete_all_notification">Удалить все уведомления?</string>
    <string name="res_percent">Совпадение</string>
    <string name="no_last_res">Результаты отсутствуют</string>
    <string name="sc_msg">Это три наиболее подходящие для тебя IT-области. Нажми на любую из них, чтобы узнать подробности.</string>
    <string name="dir_msg">Направления в Политехе, готовящие специалистов этой области</string>
    <string name="sent">Сообщение отправлено!</string>
    <!-- prompt messages -->
    <string name="prompt_msg_1">Тест займет менее 10 минут</string>
    <string name="prompt_msg_2">Если ты не в настроении, лучше ненадолго отложи тест</string>
    <string name="prompt_msg_3">Тест не гарантирует 100%-го результата</string>

    <!-- main message -->
    <string name="main_msg">Приветствуем тебя в ITest!\n Мы поможем тебе разобраться в огромном мире IT направлений, а также
    предложим несколько подходящих именно тебе!</string>

    <!-- links -->
    <string name="icst_edu_url">https://icst.spbstu.ru/edu/</string>
    <string name="assets_area_icon">icons/ic_area%d.png</string>
    <string name="icst_url">https://icst.spbstu.ru/</string>
    <!--    TODO: добавить адрес тех. поддержки-->
    <string name="support_mail_address">vefimi3935@oriwijn.com</string>

    <!-- about_app -->
    <string name="about_info">Это приложение было разработано студентами 2 курса Политехнического Университета в 2020 году.\n
    Его цель - облегчить процесс выбора направления в Институте Компьютерных Наук и Технологий СПбПУ.
        Надеемся, что нам удалось достичь эту цель. \nПо всем интересующим вопросам можно обращаться в тех. поддержку.</string>

    <!-- support_info -->
    <string name="support_info">Мы будем рады услышать любые предложения по улучшению или получить
    от Вас отзыв о приложении. Чем подробнее, тем лучше.</string>

    <!-- content description -->
    <string name="cdSupportLogo">SupportLogo</string>
    <string name="cdMainLogo">MainLogo</string>
    <string name="cdPrompt1">Prompt1</string>
    <string name="cdPrompt2">Prompt2</string>
    <string name="cdPrompt3">Prompt3</string>

    <string name="default_text">Средний</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus dapibus dignissim sem,
        nec viverra ex pharetra et. Aenean vitae lacinia tortor, id malesuada nisi. Cras vel eros ac risus facilisis.</string>

    <!-- string-array for Support Types -->
    <string-array name="support_types">
        <item>Вопрос</item>
        <item>Отзыв</item>
        <item>Предложение</item>
    </string-array>

    <!--    testing   -->
    <string name="test_question_title">Вопрос %d из %d</string>


    <!--    dialog utilities -->
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="cancel_prompt">Завершить тест?</string>
    <string name="share_res">Поделиться результатом</string>


</resources>
