<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SupportActivity">

    <include android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTop">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivSupportLogo"
                android:layout_width="300dp"
                android:layout_height="90dp"
                android:layout_marginTop="16dp"
                android:layout_gravity="center"
                android:contentDescription="@string/cdSupportLogo"
                app:srcCompat="@drawable/logo_itest" />

            <TextView
                android:id="@+id/tvSupportHello"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/hello"
                android:layout_gravity="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvSupportInfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="sans-serif-light"
                android:gravity="center"
                android:text="@string/support_info"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/spinnerSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="32dp"
                android:layout_gravity="center"
                android:entries="@array/support_types"
                android:prompt="@string/support_type_prompt"
                android:spinnerMode="dropdown" />

            <EditText
                android:id="@+id/etSupport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:autofillHints=""
                android:layout_marginEnd="32dp"
                android:hint="@string/support_hint"
                android:inputType="textMultiLine"
                android:lines="5"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnSupportSend"
                android:layout_width="200dp"
                android:layout_height="70dp"
                android:layout_marginTop="24dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:onClick="onClick"
                android:text="@string/send"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />


        </LinearLayout>
    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>