<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/promptLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.PromptActivity">

    <include
        android:id="@+id/toolbarTop"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:id="@+id/llPromptWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarTop">

        <LinearLayout
            android:id="@+id/llPrompt1"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <TextView
                android:id="@+id/tvPrompt1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_left"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/prompt_msg_1"
                android:textColor="@color/nice_green"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivPrompt1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_right"
                android:backgroundTint="@color/nice_green"
                android:contentDescription="@string/cdPrompt1"
                app:srcCompat="@drawable/prompt_icon_1" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPrompt2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/ivPrompt2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="16dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_left"
                android:backgroundTint="@color/nice_green"
                android:contentDescription="@string/cdPrompt2"
                app:srcCompat="@drawable/prompt_icon_2" />

            <TextView
                android:id="@+id/tvPrompt2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="32dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_right"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/prompt_msg_2"
                android:textColor="@color/nice_green"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPrompt3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="16dp">

            <TextView
                android:id="@+id/tvPrompt3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_left"
                android:backgroundTint="@color/white"
                android:gravity="center"
                android:text="@string/prompt_msg_3"
                android:textColor="@color/nice_green"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/ivPrompt3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/badge_rect_right"
                android:backgroundTint="@color/nice_green"
                android:contentDescription="@string/cdPrompt3"
                app:srcCompat="@drawable/prompt_icon_3" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/pbPrompt"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>